--- a/models/style.css
+++ b/models/style.css
@@ -1,7 +1,6 @@
-.col.md-6.offset-md-3{
+.col.md-4.offset-md-3{
     /* border: 2px solid red; */
     margin-top: 10%;
-    /* margin-bottom: 10%; */
 }
 .maindiv{
   height: 100vh;
@@ -9,29 +8,31 @@
 .formstyle{
  /* border: 2px solid blue; */
  background-color: #fff;
- padding: 10px;
+ padding: 20px;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
- width: 520px;
+ width: 400px;
  
 }
 .formstyle1{
   /* border: 2px solid blue; */
   background-color: #fff;
   padding: 10px;
-  /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   width: auto;
-  /* border: 2px solid red; */
   margin-top: 10%;
   margin-left: 15%;
-  /* position: absolute;
-  top: 40%;
-  left:50%;
-  transform: translate(-50% ,-50%); */
  }
 .btn{
   margin: 5px;
 }
 .fa.fa-database,.fa.fa-list-alt{
   margin-right: 4px;
+}
+
+
+@media screen and (max-width: 480px) {
+  .formstyle
+  {
+    width: fit-content;
+  }
 }
